--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "axios": "^1.7.7",
+    "js-yaml": "^4.1.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
@@ -17,6 +19,7 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
